# SpicyTavernCockpit

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: tauri-before-dev.mjs
src/: App.tsx  native.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
